Feat: Stylised popup

--- a/popup/controls.html
+++ b/popup/controls.html
@@ -3,8 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="controls.js" defer></script>
+	<link rel="stylesheet" href="controls.css">
 </head>
 <body>
 	<button id="toggle-snow">Toggle snow</button>
+	<div id="images">
+		<a href="https://www.ugr.es/">
+			<img src="/img/ugr.png" alt="UGR logo"></img>
+		</a>
+		<a href="https://osl.ugr.es/">
+			<img src="/img/osl.png" alt="OSL logo">
+		</a>
+	</div>
+	<a href="https://github.com/OSL-UGR/winterfox" id="source">Source code (GitHub)</a>
 </body>
 </html>
