Refactor: Renamed controls to popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<script src="controls.js" defer></script>
-	<link rel="stylesheet" href="controls.css">
+	<script src="popup.js" defer></script>
+	<link rel="stylesheet" href="popup.css">
 </head>
 <body>
 	<button id="toggle-snow">Toggle snow</button>
